--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 
   --background-color: light-dark(rgb(248, 250, 252), rgb(17, 25, 34));
   --background-card-color: light-dark(#E8EDF2, #243347);
+  --background-inputs-color: light-dark(#FFFFFF, #3b3b3b);
 
   --primary-color: light-dark(#126cbf, #1A78E5);
   --success-color: light-dark(#3AB795, #248169);
