--- a/src/app/pages/main/bills/bills.component.scss
+++ b/src/app/pages/main/bills/bills.component.scss
@@ -28,6 +28,13 @@
     padding: 8px;
 }
 
+.group {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
 @media (min-width: 600px) {
     .content {
         grid-template-columns: repeat(2, 1fr);
@@ -44,6 +51,11 @@
     display: flex;
     justify-content: space-between;
     padding: 1rem;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
 }
 
 .actions {
